--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Tudo aquilo que voce sempre quis saber sobre o mundo Tech, em um unico lugar</p>
     </header>
     <nav>
-        <a href="https://www.google.com/?&bih=954&biw=1920&hl=pt-BR" target="_blank">Home</a>
+        <a href="#">Home</a>
         <a href="#">Noticias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale Conosco</a>
